; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_common.c_write_file.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_common.c_write_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_file(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32* @fopen(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

15:                                               ; preds = %3
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i64 @fwrite(i8* %16, i64 %17, i32 1, i32* %18)
  store i64 %19, i64* %9, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @fclose(i32* %20)
  %22 = load i64, i64* %9, align 8
  %23 = icmp eq i64 %22, 1
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %15, %14
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i64 @fwrite(i8*, i64, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
